--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reactflow/node-resizer": "^2.2.14",
+    "@supabase/supabase-js": "^2.89.0",
     "@xyflow/react": "^12.4.2",
     "cra-template": "1.2.0",
     "firebase": "^11.0.2",
